--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   ],
   "require": {
-    "symfony/symfony": ">=2.8",
+    "symfony/symfony-framework-bundle": ">=2.8",
     "guzzlehttp/guzzle": "^6.2"
   },
   "autoload": {
@@ -19,5 +19,8 @@
   },
   "target-dir": "PRayno/CasAuthBundle",
   "extra": {
+    "branch-alias": {
+      "dev-master": "1.2-dev"
+    }
   }
 }
